Bug 61909 - FILEOPEN particular .RTF: VIEWING with unexpected character background color
Summary: FILEOPEN particular .RTF: VIEWING with unexpected character background color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: All All
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.1.0 target:4.0.3
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2013-03-06 16:29 UTC by access2godzilla
Modified: 2015-12-17 12:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Problematic RTF document (48.92 KB, application/rtf)
2013-03-06 16:31 UTC, access2godzilla
Details
View in affected LibO versions (87.18 KB, application/pdf)
2013-03-12 11:22 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description access2godzilla 2013-03-06 16:29:24 UTC
Some RTF documents fail to render properly in LO, especially those with lots of formatting. One such document, which has been generated by Notepad++'s NppExport is attached.

MS Word renders the document properly.
Comment 1 access2godzilla 2013-03-06 16:31:44 UTC
Created attachment 76028 [details]
Problematic RTF document
Comment 2 Rainer Bielefeld Retired 2013-03-06 17:09:58 UTC
Not a valid bug report!

@access2godzilla
We can not handle such "LibO still is not optimum" bugs:
<http://wiki.documentfoundation.org/BugReport#General_information> item 4

Please reduce this bug to 1 concrete problem, for example Summary "FILEOPEN particular .rtf ignores font setting 'Courier New'" or similar (only if has not already been reported.

For more problems visible in the document please submit separate bugs and cite the Attachment here <https://wiki.documentfoundation.org/QA-FAQ#How_to_use_attached_sample_documents_for_multiple_Bug_Reports>
Comment 3 access2godzilla 2013-03-12 10:35:27 UTC
Okay, in more details:

Formatting in that particular attached RTF document is completely wrong in case of Libreoffice.

1. Document should be rendered with "Courier New" font, however document is rendered in "Times New Roman".

2. Text colour is rendered in completely wrong colours.
Comment 4 Rainer Bielefeld Retired 2013-03-12 11:21:21 UTC
Already [Reproducible] with 
* unzipped  installation of  "LOdev  4.0.0.0.alpha1+   -  ENGLISH UI / German Locale  [Build ID: af60316514f3ae3d4c475819bf86f2af837171e)]"  {tinderbox: Win-x86@6, pull time 2012-11-23 22:10:31} on German WIN7 Home Premium (64bit) with own separate User Profile 
* Server-installation of Master " 3.7.0.0.alpha0+  – ENGLISH UI [Build ID: f2e622]" {tinderbox: Win-x86@16, pull time 2012-10-06 09:31:39} on German WIN7 Home Premium (64bit) UserInstallation=$SYSUSERCONFIG/LOdev/3

Still was ok with:
*server-installation of Master "3.7.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: b255de8]" (tinderbox: Win-x86@6-fast, pull time 2012-06-05 23:16:58)

That's something very special with this very special document. When I save reporter's sample with 3.6.5 as .odt, close, reopen, save as .rtf, close and then reopen with 4.0 the ugly backgrounds do not appear. So this might be a combination of document problem and LibO problem. I reduce priority

I can't tell whether the font problem is related. Also more early versions do not recognize Courier New correctly, but that now simply TNR is shown appears with the same version for me as the background problem
.
@access2godzilla:
Please do not change Status to NEW before all necessary inro has been gained!
 <https://wiki.documentfoundation.org/QA/BugTriage#Step_5._Set_Status>

@Miklós:
Please add Witeboard tag “bibisectrequest” if you think that a bibisect result can ease your work.
Please change  Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf
Comment 5 Rainer Bielefeld Retired 2013-03-12 11:22:00 UTC
Created attachment 76386 [details]
View in affected LibO versions
Comment 6 Miklos Vajna 2013-03-18 12:04:24 UTC
Assign to me, I think I know the reason of the font problem.
Comment 7 Commit Notification 2013-03-18 12:06:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=60c17b2873506ed8b068b34840aecda0c1d9bd65

fdo#61909 fix RTF import of default font without RTF_PLAIN



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-03-18 14:10:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c412cba28ebc00783041bcec74978fc959cc1351

fdo#61909 fix import of RTF_HIGHLIGHT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Miklos Vajna 2013-03-18 14:47:44 UTC
-4-0 review: https://gerrit.libreoffice.org/2817
Comment 10 Commit Notification 2013-03-18 15:03:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=65f42760736d656b4999aa8830cb4f44f6d4e718&h=libreoffice-4-0

fdo#61909 fix import of RTF_HIGHLIGHT and of default font without RTF_PLAIN


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 access2godzilla 2013-06-09 17:23:56 UTC
The issue has been fixed in LibO 4.0.0.3. Both problems i.e. wrong font and wrong colours are resolved.
Comment 12 Robinson Tryon (qubit) 2015-12-17 12:13:18 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]