fdo#61909 fix RTF import of default font without RTF_PLAIN

Change-Id: Ia86548bddb7b87ec9653192c2e5989ce0dc50057